# wordler

./: README.md  pyproject.toml
wordler/: app.py  main.py
wordler/app/callbacks/: __init__.py  _global.py  _info.py  _inputs.py  _letters.py  _outputs.py  utils.py
wordler/app/cards/: __init__.py  _cards.py  _functions.py  _guess.py  _how_to.py  _info.py
wordler/app/javascript/: __init__.py  _javascript_functions.py
wordler/app/utils/: __init__.py  _constants.py  _styles.py
wordler/cli/: functions.py
wordler/data/: __init__.py  _constants.py
wordler/solver/: _solver.py
wordler/tables/: _probability_tables.py
